objects/FSL__Work_Rule__c.object
<CustomObject>
    <label>Work Rule</label>
    <nameField>
        <label>Work Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>FSL__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__CountType__c</fullName>
        <inlineHelpText>The type of item counted in the work rule.</inlineHelpText>
        <label>Count Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assignments</fullName>
                    <default>true</default>
                    <label>Assignments</label>
                </value>
                <value>
                    <fullName>Duration</fullName>
                </value>
                <value>
                    <fullName>CustomValue</fullName>
                    <label>Custom Value</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Break_Start__c</fullName>
        <inlineHelpText>Determines the minimum break start time (in the format: {HH:MM}) to create breaks. 
Leave this field empty if you don&apos;t want to create breaks.</inlineHelpText>
        <label>Break Start</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__CountObject__c</fullName>
        <inlineHelpText>The object containing the custom field that&apos;s used for the count.</inlineHelpText>
        <label>Count object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ServiceAppointment</fullName>
                    <default>true</default>
                    <label>Service Appointment</label>
                </value>
                <value>
                    <fullName>WorkOrder</fullName>
                    <label>Work Order</label>
                </value>
                <value>
                    <fullName>WorkOrderLineItem</fullName>
                    <label>Work Order Line Item</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Minimum_Gap__c</fullName>
        <inlineHelpText>Determines the minimum gap between services. If fixed gap is enabled, determines the gap between the services.</inlineHelpText>
        <label>Minimum Gap (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__DefaultLimit__c</fullName>
        <inlineHelpText>A limit for the count. A limit on the service resource overrides this value.</inlineHelpText>
        <label>Default Limit</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Is_Fixed_Gap__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, gap between services will be based on the minimum gap field, without travel calculations.</inlineHelpText>
        <label>Fixed Gap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Start_of_Day__c</fullName>
        <defaultValue>&quot;00:00&quot;</defaultValue>
        <label>Start of Day</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__isTimephased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time-Phased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Break_Duration__c</fullName>
        <inlineHelpText>Determines the length of the breaks created. 
Leave this field empty if you don&apos;t want to create breaks.</inlineHelpText>
        <label>Break Duration (minutes)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Travel_To_Home__c</fullName>
        <inlineHelpText>Determines how many minutes following the resource&apos;s calendar end of day will be available for travel (on the resource&apos;s expense).
When empty, any amount of travel following the end of work day is valid.</inlineHelpText>
        <label>Travel To Home (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__CustomFieldName__c</fullName>
        <inlineHelpText>The API name of the custom field on the count object.</inlineHelpText>
        <label>Custom Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Enable_Overtime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Overtime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Boolean_Operator__c</fullName>
        <inlineHelpText>Compare a numeric service property with a numeric resource property</inlineHelpText>
        <label>Boolean Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                    <default>true</default>
                    <label>=</label>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Evaluation_Order__c</fullName>
        <formula>CASE( RecordType.DeveloperName, &quot;Match_Skills&quot;, 2, &quot;Minimum_Rest_Time&quot;, 5, &quot;Overlapping_Shift&quot;, 3 , &quot;Maximum_Work&quot;, 6 , &quot;Maximum_Shift_Length&quot;, 1 , &quot;Minimum_Shift_Length&quot;,1 ,&quot;Match_Fields&quot;, 2, &quot;Do_Not_Overlap_Vacation&quot;, 3, &quot;Match_Constant_Boolean&quot;, 2 , &quot;Resource_Calendar_Availability&quot;, 2, &quot;Maximum_Pain_Shifts&quot;, 6, &quot;Maximum_Consecutive_Work&quot;, 6 ,9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evaluation Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Property__c</fullName>
        <label>Service Property</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ServiceTerritory</fullName>
                    <default>true</default>
                    <label>ServiceTerritory</label>
                </value>
                <value>
                    <fullName>ArrivalWindowEndTime</fullName>
                </value>
                <value>
                    <fullName>ArrivalWindowStartTime</fullName>
                </value>
                <value>
                    <fullName>SchedEndTime</fullName>
                </value>
                <value>
                    <fullName>SchedStartTime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Travel_From_Home__c</fullName>
        <inlineHelpText>Determines how many minutes prior to the resource&apos;s calendar start of day will be available for travel (on the resource&apos;s expense).
When empty, any amount of travel prior to start of work day is valid.</inlineHelpText>
        <label>Travel From Home (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Match_Skill_Level__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Match Skill Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Pass_Empty_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pass Empty Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Resource_Property__c</fullName>
        <inlineHelpText>A numeric field on the service resource to count against.</inlineHelpText>
        <label>Resource Property</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IsActive</fullName>
                </value>
                <value>
                    <fullName>IsCapacityBased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Object_Group_Field__c</fullName>
        <label>Object Group Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__CountTimeResolution__c</fullName>
        <inlineHelpText>The time resolution for the count.</inlineHelpText>
        <label>Count Time Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                    <default>true</default>
                    <label>Daily</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Resource_Group_Field__c</fullName>
        <label>Resource Group Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Time_Operator__c</fullName>
        <label>Service Time Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Before</fullName>
                    <default>true</default>
                    <label>Before</label>
                </value>
                <value>
                    <fullName>Before or Equal to</fullName>
                </value>
                <value>
                    <fullName>Equal to</fullName>
                </value>
                <value>
                    <fullName>Later than or Equal to</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Service_Time_Property__c</fullName>
        <label>Service Time Property</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EarliestStartTime</fullName>
                    <default>true</default>
                    <label>EarliestStartTime</label>
                </value>
                <value>
                    <fullName>DueDate</fullName>
                </value>
                <value>
                    <fullName>ArrivalWindowStartTime</fullName>
                </value>
                <value>
                    <fullName>ArrivalWindowEndTime</fullName>
                </value>
                <value>
                    <fullName>EarliestStartTime__c</fullName>
                </value>
                <value>
                    <fullName>DueDate__c</fullName>
                </value>
                <value>
                    <fullName>ArrivalWindowStartTime__c</fullName>
                </value>
                <value>
                    <fullName>ArrivalWindowEndTime__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Maximum_Travel_From_Home__c</fullName>
        <inlineHelpText>Determines what distance or how many minutes the resource can travel from home to reach a service</inlineHelpText>
        <label>Maximum Travel From Home</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Crew_Resources_Availability__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, compare the Minimum Crew Size field on the Work Order or Work Order Line Item to the actual available Service Crew Members. 
Otherwise, compare the Minimum Crew Size to the Crew Size field on the Service Crew.</inlineHelpText>
        <label>Consider Service Crew Membership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__WorkRule_End_DateTime_Field__c</fullName>
        <description>Represents the DateTime field name used by Time-Phased work rules as a end value. Required if Time-Phased equals true</description>
        <inlineHelpText>The Date-Time field name on the Linking Object which represents its end time</inlineHelpText>
        <label>End Date Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Match_Constant_Boolean_Value__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Value is True</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Enhanced_Match_Linking_Object__c</fullName>
        <description>Represents the junction object used to link service resources to the object that the service appointment matching field references</description>
        <inlineHelpText>The junction object used to link service resources to the object that the service appointment matching field references</inlineHelpText>
        <label>Linking Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Maximum_Travel_From_Home_Type__c</fullName>
        <label>Maximum Travel From Home Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distance</fullName>
                    <default>true</default>
                    <label>Distance</label>
                </value>
                <value>
                    <fullName>Travel Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__WorkRule_Start_DateTime_Field__c</fullName>
        <description>Represents the DateTime field name used by Time-Phased work rules as a start value. Required if Time-Phased equals true</description>
        <inlineHelpText>The Date-Time field name on the Linking Object which represents its start time</inlineHelpText>
        <label>Start Date Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Schedule_Time_Property__c</fullName>
        <label>Service Schedule Time Property</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SchedStartTime</fullName>
                    <default>true</default>
                    <label>SchedStartTime</label>
                </value>
                <value>
                    <fullName>SchedEndTime</fullName>
                </value>
                <value>
                    <fullName>SchedStartTime__c</fullName>
                </value>
                <value>
                    <fullName>SchedEndTime__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Working_Location_Enable_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Working Location Enable Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Appointment_Matching_Field__c</fullName>
        <description>Represents the service appointment field that you&apos;re matching. The field must be of type Lookup</description>
        <inlineHelpText>The service appointment lookup field that you&apos;re matching</inlineHelpText>
        <label>Service Appointment Matching Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Linking_Object_Reference_Field__c</fullName>
        <description>Represents the reference field on the linking object that is matched with the service appointment matching field</description>
        <inlineHelpText>The reference field on the linking object that is matched with the service appointment matching field</inlineHelpText>
        <label>Linking Object Reference Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>FSL__Count_Rule</fullName>
        <active>true</active>
        <description>Limits service resources based on a number of items such as service appointments, appointment durations, or custom field values</description>
        <label>Field Service - Count Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Gap_Rule_Service</fullName>
        <active>true</active>
        <description>Ensures that the service resource is available for a service appointment</description>
        <label>Field Service - Service Resource Availability</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Time_Rule_Service</fullName>
        <active>true</active>
        <description>Limits the scheduling time window according to service appointment datetime properties</description>
        <label>Field Service - Match Time Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Match_Fields_Service</fullName>
        <active>true</active>
        <description>Matches a property between a service appointment object and a service resource object</description>
        <label>Field Service - Match Fields</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Match_Skills_Service</fullName>
        <active>true</active>
        <description>Matches the required skills for a service appointment with the service resource&apos;s skills</description>
        <label>Field Service - Match Skills</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Match_Boolean_Service</fullName>
        <active>true</active>
        <description>Validates boolean property is set to true or false</description>
        <label>Field Service - Match Boolean</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Enhanced_Match_Service</fullName>
        <active>true</active>
        <description>Matches a property between a service appointment object to a property cointained in a list in service resource object</description>
        <label>Field Service - Extended Match</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Match_Location_Service</fullName>
        <active>true</active>
        <description>Matches the territory between a service appointment object and a service resource object with Relocation support</description>
        <label>Field Service - Match Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Service_Visiting_Hours</fullName>
        <active>true</active>
        <description>Ensures that the service appointment is scheduled within the customer defined visiting hours.</description>
        <label>Field Service - Service Appointment Visiting Hours</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Field_Working_Locations</fullName>
        <active>true</active>
        <description>Match service resource working territories</description>
        <label>Field Service - Working Territories</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Match_Crew_Size_Service</fullName>
        <active>true</active>
        <description>Match crew size to  service parent minimum crew size</description>
        <label>Field Service - Service Crew Resources Availability</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__TimeSlot_Designated_Work</fullName>
        <active>true</active>
        <description>Ensures that the service appointment is permitted to be scheduled on the time slots it is spread upon.</description>
        <label>Field Service - TimeSlot Designated Work</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Excluded_Resources_Service</fullName>
        <active>true</active>
        <description>Ensures that the assigned resource for the service appointment is not one of the excluded resources</description>
        <label>Field Service - Excluded Resources</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Required_Resources_Service</fullName>
        <active>true</active>
        <description>Ensures that the assigned resource for the service appointment is one of the required resources</description>
        <label>Field Service - Required Resources</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Max_Travel_From_Home_To_Service</fullName>
        <active>true</active>
        <description>Limits service resources travel distance\time from home</description>
        <label>Field Service - Maximum Travel From Home</label>
    </recordTypes>
    <validationRules>
        <fullName>FSL__Time_Format</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
LEN ( FSL__Break_Start__c ) != 0, 
NOT( 
REGEX( FSL__Break_Start__c , &quot;^(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;) 
)
)</errorConditionFormula>
        <errorDisplayField>FSL__Break_Start__c</errorDisplayField>
        <errorMessage>Time must be in the following format: HH:MM</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Check_time_rule</fullName>
        <active>true</active>
        <description>If record type is Time_Rule_Service, Service_Schedule_Time_Property__c is SchedEndTime, then Service_Time_Operator__c must be &quot;Before or Equal to&quot;</description>
        <errorConditionFormula>RecordType.DeveloperName  = &apos;Time_Rule_Service&apos; &amp;&amp;  ISPICKVAL(FSL__Service_Schedule_Time_Property__c, &apos;SchedEndTime&apos;)  &amp;&amp; (  !ISPICKVAL(FSL__Service_Time_Operator__c , &apos;Before or Equal to&apos;)  )</errorConditionFormula>
        <errorMessage>Time Operator should be &apos;Before or Equal To&apos; when Service Schedule Time Property is &apos;SchedEndTime&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Greater_than_zero</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Gap_Rule_Service&apos; &amp;&amp;  FSL__Break_Duration__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>FSL__Break_Duration__c</errorDisplayField>
        <errorMessage>Duration must be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Minimum_Gap_Positive</fullName>
        <active>true</active>
        <description>Resource availability, min gap shouldn&apos;t be negative</description>
        <errorConditionFormula>RecordType.DeveloperName  = &apos;Gap_Rule_Service&apos;  &amp;&amp;  FSL__Minimum_Gap__c &lt; 0</errorConditionFormula>
        <errorDisplayField>FSL__Minimum_Gap__c</errorDisplayField>
        <errorMessage>Minimum gap should not be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Start_Of_Day_Time_Format</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
LEN ( FSL__Start_of_Day__c ) != 0, 
NOT( 
REGEX( FSL__Start_of_Day__c , &quot;^(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;) 
)
)</errorConditionFormula>
        <errorDisplayField>FSL__Start_of_Day__c</errorDisplayField>
        <errorMessage>Time must be in the following format: HH:MM</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Maximum_Travel_Must_Be_Positive</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Max_Travel_From_Home_To_Service&apos; &amp;&amp; FSL__Maximum_Travel_From_Home__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>FSL__Maximum_Travel_From_Home__c</errorDisplayField>
        <errorMessage>Maximum Travel from Home must be positive.</errorMessage>
    </validationRules>
</CustomObject>